--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
   Hello world
+
+  <h1>I am Frin Patel</h1>
+  <p>I made this changes just for try</p>
   <script src="script.js"></script>
 </body>
 
